Replace all images from png to svg

--- a/bid-history.html
+++ b/bid-history.html
@@ -99,7 +99,7 @@
     </aside>
     <main class="app-content">
         <div class="transaction_list_top_section d-flex justify-content-around align-items-center ">
-            <img src="./assets/images/bid_history_top.png" alt="">
+            <img src="./assets/images/bid_history_top.svg" alt="" height="80px">
             <div>
                 <p>Total Bidding Amount</p>
                 <p class="money" id="total_bid_amount">₹0</p>
