--- a/contact-us.html
+++ b/contact-us.html
@@ -111,7 +111,7 @@
             <div class="sub_contact  ">
                 <div class="row mt-4">
                     <div class="col-5 d-flex justify-content-center">
-                        <img src="./assets/shapes/phone_icon.png" alt="">
+                        <img src="./assets/shapes/phone_icon.svg" alt="">
                     </div>
                     <div class="col-7 text-center">
                         <h6>6789087655</h6>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col-5 d-flex justify-content-center">
-                        <img src="./assets/shapes/location_icon.png" alt="">
+                        <img src="./assets/shapes/location_icon.svg" width="30px" alt="">
                     </div>
                     <div class="col-7 text-center">
                         <h6>124/46<br />Maharashtra</h6>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col-5 d-flex justify-content-center">
-                        <img src="./assets/shapes/email_icon.png" alt="">
+                        <img src="./assets/shapes/email_icon.svg" width="30px" alt="">
                     </div>
                     <div class="col-7 text-center">
                         <h6>xyz@gmail.com</h6>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col-5 d-flex justify-content-center">
-                        <img src="./assets/shapes/whatasapp_icon.png" alt="">
+                        <img src="./assets/shapes/whatasapp.svg" width="30px" alt="">
                     </div>
                     <div class="col-7 text-center">
                         <h6>6789087655</h6>
