--- a/deposite-history.html
+++ b/deposite-history.html
@@ -104,7 +104,7 @@
                 <p>Total Deposite Amount</p>
                 <p class="money" id="total_deposite_amount">₹0</p>
             </div>
-            <img src="./assets/images/deposit_top.png" alt="">
+            <img src="./assets/images/deposit_top.svg" height="105px" alt="">
         </div>
         <div class="transaction_main_container">
             <h4>Transaction Details</h4>
