--- a/game-rate.html
+++ b/game-rate.html
@@ -97,7 +97,7 @@
     </aside>
     <main class="app-content">
         <div style="max-height: 200px;" class="text-center pt-1">
-            <img src="./assets/images/gamerate_banner.png" height="150px" alt="">
+            <img src="./assets/images/gamerate_banner.svg" height="150px" alt="">
         </div>
         <div class="game_rate_main_container" id="game_rate_main_container_id">
         </div>
