--- a/home.html
+++ b/home.html
@@ -141,7 +141,7 @@
         </div>
         <div class="home_page_whatsApp" id="home_page_whatsApp_id"><a
                 href="https://api.whatsapp.com/send?phone=+919834848219&text=Hii"><img style="height: 35px;margin: 7px;"
-                    src="./assets/shapes/whatsapp.png" alt=""></a><span><i
+                    src="./assets/shapes/whatasapp.svg" alt=""></a><span><i
                     onclick="document.getElementById('home_page_whatsApp_id').innerHTML=''"
                     class="fa fa-times"></i></span></div>
     </main>
