--- a/passbook.html
+++ b/passbook.html
@@ -99,7 +99,7 @@
     <main class="app-content">
         <div style="background:none;"
             class="transaction_list_top_section d-flex justify-content-around align-items-center ">
-            <img src="./assets/images/passbook.png" alt="">
+            <img src="./assets/images/passbook.svg" alt="" height="100px">
             <div style="border-color: white;">
                 <p>Total Balance</p>
                 <p class="money">₹<span id="passbook_id">0</span></p>
@@ -117,7 +117,7 @@
                 data-target="#add_money_modal">
                 <div class="d-flex justify-content-center align-items-center "
                     style="background:#1AC16A;height: 100%;width: 42px;border-radius: 6px 0px 0px 6px;">
-                    <img src="./assets/images/passbook-add.png" alt="">
+                    <img src="./assets/images/passbook-add.svg" alt="">
                 </div>
                 <div class="d-flex justify-content-center align-items-center pt-2"
                     style="height:100%;width: calc(100% - 42px);">
@@ -128,7 +128,7 @@
                 style="border-radius: 6px;height: 50px;color:black;background:white">
                 <div class="d-flex justify-content-center align-items-center"
                     style="background:#FFCA28;height: 100%;width: 42px;border-radius: 6px 0px 0px 6px;">
-                    <img src="./assets/images/passbook-withdrawal.png" alt="">
+                    <img src="./assets/images/passbook-withdrawal.svg" alt="">
                 </div>
                 <div class="d-flex justify-content-center align-items-center  text-center pt-2"
                     style="height:100%;width: calc(100% - 42px) ;">
