--- a/rules.html
+++ b/rules.html
@@ -101,7 +101,7 @@
     </aside>
     <main class="app-content">
         <div class="d-flex justify-content-between align-items-end position-relative" style="height:170px;">
-            <img src="./assets/images/rules.png" style="height: 130px;" alt="">
+            <img src="./assets/images/rules.svg" style="height: 130px;" alt="">
             <div style="text-align: right;padding-bottom: 10px;">
                 <p style="font-size: 30px;font-weight: 900;margin: 0px;">Rules</p>
                 <p style="font-size: 30px;font-weight: 900;margin: 0px;padding: 0px;">and</p>
