--- a/share.html
+++ b/share.html
@@ -99,7 +99,7 @@
     <main class="app-content">
         <div style="max-height: 200px;" class="text-center pt-3">
             <h4>Invite your friend and<br />Earn Money</h4>
-            <img src="./assets/images/share_connect.webp" height="150px" alt="">
+            <img src="./assets/images/share_connect.svg" height="150px" alt="">
         </div>
         <div class="share_main_container">
             <div class="share_quote">
