--- a/win-history.html
+++ b/win-history.html
@@ -104,7 +104,7 @@
                 <p>Total Winning Amount</p>
                 <p class="money" id="total_winning_amount">₹0</p>
             </div>
-            <img src="./assets/images/winning_top.png" alt="">
+            <img src="./assets/images/winning_top.svg" alt="" height="100px">
         </div>
         <div class="transaction_main_container">
             <h4>Transaction Details</h4>
