--- a/withdrawal.html
+++ b/withdrawal.html
@@ -103,7 +103,7 @@
                 <p>Total Withdrawal Amount</p>
                 <p class="money" id="total_withdrawal_amount">₹0</p>
             </div>
-            <img src="./assets/images/withdrawal_top.png" alt="">
+            <img src="./assets/images/withdrawal_top.svg" height="105px" alt="">
         </div>
         <div class="transaction_main_container">
             <h4>Transaction Details</h4>
