--- a/how-to-play.html
+++ b/how-to-play.html
@@ -101,7 +101,7 @@
     <main class="app-content">
         <div class="d-flex justify-content-end align-items-center flex-column position-relative" style="height:170px;">
             <p class="position-absolute" style="right: 10px;top:10px;font-size: 30px;font-weight: 900;">How to Play?</p>
-            <img src="./assets/images/how-to-play.png" style="height: 130px;" alt="">
+            <img src="./assets/images/how-to-play.svg" style="height: 130px;" alt="">
         </div>
         <div class="rules_container">
             <div class="rules_box">
