Fix all transaction page css issue

--- a/passbook.html
+++ b/passbook.html
@@ -235,7 +235,7 @@
                             <i class="fa fa-plus" aria-hidden="true"></i>
                         </div>
                         <div
-                            style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
+                            style="flex-basis: calc(100% - 50px);display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
                             <div>
                                 <h6>${element?.transaction_name}</h6>
                                 <small>${convertDateAndTime(element?.created_at)}</small>
@@ -256,7 +256,7 @@
                             <i class="fa fa-minus" aria-hidden="true"></i>
                         </div>
                         <div
-                            style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
+                            style="flex-basis: calc(100% - 50px);display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
                             <div>
                                 <h6>${element?.transaction_name}</h6>
                                 <small>${convertDateAndTime(element?.created_at)}</small>
@@ -277,7 +277,7 @@
                             <i class="fa fa-plus" aria-hidden="true"></i>
                         </div>
                         <div
-                            style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
+                            style="flex-basis: calc(100% - 50px);display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
                             <div>
                                 <h6>${element?.transaction_name}</h6>
                                 <small>${convertDateAndTime(element?.created_at)}</small>
