--- a/bid-history.html
+++ b/bid-history.html
@@ -146,7 +146,7 @@
                         <i class="fa fa-minus" aria-hidden="true"></i>
                     </div>
                     <div
-                        style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
+                        style="flex-basis: calc(100% - 50px);display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
                         <div>
                             <h6>${transactionList[i]?.game_name} - ${transactionList[i]?.game_type} - ${transactionList[i]?.number}</h6>
                             <small>${transactionList[i]?.market_fullname} - ${convertDateAndTime(transactionList[i]?.created_at)}</small>
