--- a/deposite-history.html
+++ b/deposite-history.html
@@ -147,7 +147,7 @@
                         <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
-                        style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
+                        style="flex-basis: calc(100% - 50px);display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
                         <div>
                             <h6>${transactionList[i]?.transaction_name}</h6>
                             <small>${convertDateAndTime(transactionList[i]?.created_at)}</small>
