--- a/win-history.html
+++ b/win-history.html
@@ -146,7 +146,7 @@
                         <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
-                        style="display: flex; flex-basis: 85%; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
+                        style="display: flex; flex-basis: calc(100% - 50px); justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
                         <div>
                             <h6>${element?.transaction_name}</h6>
                             <small>${convertDateAndTime(element?.created_at)}</small>
