--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         <div class="logo">
             <h1>Arena</h1>
         </div>
-        <div class="login-box">
+        <div class="login-box" style="min-height:430px;">
             <form class="login-form">
+                <h3 class="login-head" style="color: black;"><i class="fa fa-lg fa-fw  fa-lock"></i>Login</h3>
                 <div class="form-group">
                     <label class="control-label">PHONE</label>
                     <input class="form-control login_form" maxlength="10" id="login_username" type="text"
@@ -61,12 +62,12 @@
                 <p class="semibold-text mt-4 text-center"><a href="signup.html" style="color:  #666;">Register Now </a>
                 </p>
             </form>
-            <form class="forget-form" action="dashboard.html">
-                <div id="forgot_pass_container">
-                    <h3 class="login-head"><i class="fa fa-lg fa-fw fa-lock"></i>Forgot Password ?</h3>
+            <form class="forget-form" >
+                <div id="forgot_pass_container"  >
+                    <h3 class="login-head" style="color: black;"><i class="fa fa-lg fa-fw fa-lock"></i>Forgot Password ?</h3>
                     <div class="form-group">
-                        <label class="text-white">EMAIL</label>
-                        <input class="form-control" type="text" placeholder="Email" id="email">
+                        <label  class="control-label">EMAIL</label>
+                        <input class="form-control login_form" type="email" placeholder="Email" id="email">
                     </div>
                     <div class="form-group btn-container">
                         <button class="btn btn-primary btn-block" type="button" onclick="handleSendCode()"><i
@@ -170,15 +171,15 @@
                     container_forgot.innerHTML = ''
                     container_forgot.innerHTML = container_forgot.innerHTML +
                         `
-                    <h3 class="login-head"><i class="fa fa-lg fa-fw fa-lock"></i>Reset Password ?</h3>
+                    <h3 class="login-head" style="color:black;"><i class="fa fa-lg fa-fw fa-lock"></i>Reset Password</h3>
                     <div class="form-group">
-                        <label class="text-white">OTP</label>
-                        <input class="form-control" id="otp" type="text" placeholder="otp" autofocus
+                        <label class="control-label">OTP</label>
+                        <input class="form-control login_form" id="otp" type="text" placeholder="otp" autofocus
                             oninput="this.value=this.value.replace(/[^0-9]/g,'');">
                     </div>
                     <div class="form-group">
-                        <label class="text-white">Password</label>
-                        <input class="form-control" id="reset_password" type="password" placeholder="New Password">
+                        <label class="control-label">Password</label>
+                        <input class="form-control login_form" id="reset_password" type="password" placeholder="New Password">
                     </div>
                     <div class="form-group btn-container">
                         <button class="btn btn-primary btn-block" type="button" onclick="handleVerify()"><i
