--- a/withdrawal.html
+++ b/withdrawal.html
@@ -78,17 +78,12 @@
             </li>
             <li><a class="app-menu__item active" href="withdrawal.html"><i class="app-menu__icon fa fa-money"></i><span
                         class="app-menu__label">Withdrawal</span></a></li>
-            <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
-                        class="app-menu__icon fa fa-handshake-o"></i><span class="app-menu__label">Help</span><i
-                        class="treeview-indicator fa fa-angle-right"></i></a>
-                <ul class="treeview-menu">
-                    <li><a class="treeview-item" href="how-to-play.html"><i class="icon fa fa-circle-o"></i>How to
-                            Play</a></li>
+            <li><a class="app-menu__item" href="how-to-play.html"><i class="app-menu__icon fa fa-question"></i>How to
+                    Play</a></li>
 
-                    <li><a class="treeview-item" href="rules.html"><i class="icon fa fa-circle-o"></i>Notice board /
-                            Rules</a></li>
-                </ul>
-            </li>
+            <li><a class="app-menu__item" href="rules.html"><i class="app-menu__icon fa fa-file-text-o"></i>Notice board
+                    /
+                    Rules</a></li>
             <li><a class="app-menu__item" href="contact-us.html"><i class="app-menu__icon fa fa-headphones"></i><span
                         class="app-menu__label">Contact Us</span></a></li>
             <li><a class="app-menu__item" href="share.html"><i class="app-menu__icon fa fa-share-alt"></i><span
@@ -134,7 +129,7 @@
             axiosInstance.get('withdrawal_history').then((response) => {
                 endLoader()
                 if (response.status === 200) {
-                    document.getElementById('total_withdrawal_amount').innerHTML =  `₹${response?.data?.total_withdrawal_amount}`
+                    document.getElementById('total_withdrawal_amount').innerHTML = `₹${response?.data?.total_withdrawal_amount}`
                     let transactionList = response.data.withdrawal_history
                     let transaction_container = document.getElementById('transaction_container')
                     transaction_container.innerHTML = ''
