--- a/withdrawal.html
+++ b/withdrawal.html
@@ -59,7 +59,7 @@
             <li><a class="app-menu__item" href="game-rate.html"><i class="app-menu__icon fa  fa-inr"></i><span
                         class="app-menu__label">Game Rate</span></a>
             </li>
-            <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
+            <li class="treeview"><a class="app-menu__item active" href="#" data-toggle="treeview"><i
                         class="app-menu__icon fa fa-history"></i><span class="app-menu__label">History</span><i
                         class="treeview-indicator fa fa-angle-right"></i></a>
                 <ul class="treeview-menu">
@@ -71,13 +71,11 @@
                     <li><a class="treeview-item" href="deposite-history.html"><i class="icon fa fa-circle-o"></i>Deposit
                             History</a>
                     </li>
-                    <li><a class="treeview-item" href="withdrawal.html"><i class="icon fa fa-circle-o"></i>Withdrawal
+                    <li><a class="treeview-item active" href="withdrawal.html"><i class="icon fa fa-circle-o"></i>Withdrawal
                             History</a>
                     </li>
                 </ul>
             </li>
-            <li><a class="app-menu__item active" href="withdrawal.html"><i class="app-menu__icon fa fa-money"></i><span
-                        class="app-menu__label">Withdrawal</span></a></li>
             <li><a class="app-menu__item" href="how-to-play.html"><i class="app-menu__icon fa fa-question"></i>How to
                     Play</a></li>
 
@@ -149,6 +147,14 @@
                         </div>
                     </div>
                     </div>`
+                    }
+                    if (transactionList.length == 0) {
+                        transaction_container.innerHTML = `<h6 style="
+                            text-align: center;
+                            margin-top: 45%;
+                            float: center;
+                            color: gray;
+                        " >No Transaction Found</h6>`
                     }
                 } else {
                     if (response?.data?.is_logged_out) {
