Remove time from market card

--- a/home.html
+++ b/home.html
@@ -175,7 +175,7 @@
                                     `<h4>${gameList[i]?.market_fullname}</h4>` +
                                     `<small><b>${gameList[i]?.result}</b></small><div>` +
                                     ` <small>Open time - ${convertTime(gameList[i]?.market_opentime)}</small>` +
-                                    ` <small class="text-danger">${timeRemain} left</small>` +
+                                    // ` <small class="text-danger">${timeRemain} left</small>` +
                                     `<small >Close time - ${convertTime(gameList[i]?.market_closetime)}</small></div></div>`
                                 break;
                             case 'close':
@@ -188,7 +188,7 @@
                                     `<h4>${gameList[i]?.market_fullname}</h4>` +
                                     `<small><b>${gameList[i]?.result}</b></small><div>` +
                                     ` <small>Open time - ${convertTime(gameList[i]?.market_opentime)}</small>` +
-                                    ` <small class="text-danger">${timeRemain} left</small>` +
+                                    // ` <small class="text-danger">${timeRemain} left</small>` +
                                     `<small >Close time - ${convertTime(gameList[i]?.market_closetime)}</small></div></div>`
                                 break;
                             case 'disabled':
