Add home page redirection link in bid page

--- a/bid.html
+++ b/bid.html
@@ -36,6 +36,9 @@
     <header class="app-header"><a class="app-header__logo" href="#">Arena</a>
         <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
             aria-label="Hide Sidebar"></a>
+        <!-- home -->
+        <i class="fa fa-home" onclick="navigate('home.html')"
+            style="position:absolute;left:50px;top:12px;font-size: 22px;"></i>
         <!-- Navbar Right Menu-->
         <ul class="app-nav">
             <!-- User Menu-->
