add notificatin feature

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 </head>
 
 <body>
@@ -87,6 +89,8 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/notification.js"></script>
+    <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
     <!-- The javascript plugin to display page loading on top-->
     <script src="js/plugins/pace.min.js"></script>
     <script type="text/javascript" src="js/plugins/bootstrap-notify.min.js"></script>
