CHinmay - Top text modification

--- a/how-to-play.html
+++ b/how-to-play.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How to play - Arena</title>
+    <title>How to play - BHOLE Games</title>
     <!-- Main CSS-->
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -28,7 +28,7 @@
     </div>
     <!-- END: -->
     <!-- Navbar-->
-    <header class="app-header"><a class="app-header__logo" href="#">Arena</a>
+    <header class="app-header"><a class="app-header__logo" href="#">BHOLE Games</a>
         <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
             aria-label="Hide Sidebar"></a>
         <!-- Navbar Right Menu-->
