--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Login - Arena</title>
+    <title>Login - BHOLE Games</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,7 +34,7 @@
     </section>
     <section class="login-content">
         <div class="logo">
-            <h1>Arena</h1>
+            <h1>BHOLE Games</h1>
         </div>
         <div class="login-box" style="min-height:430px;">
             <form class="login-form">
