--- a/share.html
+++ b/share.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share - Arena</title>
+    <title>Share - BHOLE Games</title>
     <!-- Main CSS-->
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -28,7 +28,7 @@
     </div>
     <!-- END: -->
     <!-- Navbar-->
-    <header class="app-header"><a class="app-header__logo" href="#">Arena</a>
+    <header class="app-header"><a class="app-header__logo" href="#">BHOLE Games</a>
         <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
             aria-label="Hide Sidebar"></a>
         <!-- Navbar Right Menu-->
@@ -138,7 +138,7 @@
     <script>
         document.getElementById('copy_id_1').innerHTML = localStorage.getItem('referral_code')
         const shareData = {
-            title: 'Arena',
+            title: 'BHOLE Games',
             text: 'Earn with us.',
             url: `${window?.location?.origin}/signup.html?a=${localStorage.getItem('referral_code')}`
         }
