--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Sign Up - Arena</title>
+    <title>Sign Up - BHOLE Games</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,7 +31,7 @@
     </section>
     <section class="login-content">
         <div class="logo">
-            <h1>Arena</h1>
+            <h1>BHOLE Games</h1>
         </div>
         <div class="login-box" style="min-height: 520px;">
             <form class="login-form" style="padding-top: 20px;">
