--- a/matka.html
+++ b/matka.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matka</title>
+    <title>BHOLE Games</title>
     <!-- Main CSS-->
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+        <!-- favicon -->
+        <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
 </head>
 
 <body class="app sidebar-mini" >
@@ -16,7 +18,7 @@
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
         Indicates a successful or positive action.
     </div>
-    Welcome to matkaApplicaton
+    Welcome to BHOLE Games
     <h6><a href="index.html">Open </a> in mobile device</h6>
     <script>
         console.log(window.location,'')
