--- a/signup.html
+++ b/signup.html
@@ -31,7 +31,7 @@
     </section>
     <section class="login-content">
         <div class="logo">
-            <h1>BHOLE Games</h1>
+            <img src="./assets/favicon.png" alt="" style="height: 60px;">
         </div>
         <div class="login-box" style="min-height: 520px;">
             <form class="login-form" style="padding-top: 20px;">
