--- a/withdrawal.html
+++ b/withdrawal.html
@@ -16,6 +16,8 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
 </head>
 
 <body class="app sidebar-mini">
@@ -71,7 +73,8 @@
                     <li><a class="treeview-item" href="deposite-history.html"><i class="icon fa fa-circle-o"></i>Deposit
                             History</a>
                     </li>
-                    <li><a class="treeview-item active" href="withdrawal.html"><i class="icon fa fa-circle-o"></i>Withdrawal
+                    <li><a class="treeview-item active" href="withdrawal.html"><i
+                                class="icon fa fa-circle-o"></i>Withdrawal
                             History</a>
                     </li>
                 </ul>
