--- a/notification.html
+++ b/notification.html
@@ -18,6 +18,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+        <!-- favicon -->
+        <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
 </head>
 
 <body class="app sidebar-mini">
