--- a/game.html
+++ b/game.html
@@ -16,8 +16,10 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <!-- favicon -->
-        <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <script>navigator.serviceWorker.register("service-worker.js")</script>
+    <link rel="manifest" href="manifest.json" />
 </head>
 
 <body class="app sidebar-mini">
