--- a/notification.html
+++ b/notification.html
@@ -18,8 +18,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
-        <!-- favicon -->
-        <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <script>navigator.serviceWorker.register("service-worker.js")</script>
+    <link rel="manifest" href="manifest.json" />
 </head>
 
 <body class="app sidebar-mini">
@@ -98,24 +100,24 @@
     <main class="app-content">
         <p>Welcome to the push messaging codelab. The button below needs to be
             fixed to support subscribing to push.</p>
-            <p>
-              <button disabled class="js-push-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+        <p>
+            <button disabled class="js-push-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
                 Enable Push Messaging
-              </button>
-            </p>
-            <section class="subscription-details js-subscription-details is-invisible">
-              <p>Once you've subscribed your user, you'd send their subscription to your
-              server to store in a database so that when you want to send a message
-              you can lookup the subscription and send a message to it.</p>
-              <p>To simplify things for this code lab copy the following details
-              into the <a href="https://web-push-codelab.glitch.me//">Push Companion
-              Site</a> and it'll send a push message for you, using the application
-              server keys on the site - so make sure they match.</p>
-              <pre><code class="js-subscription-json"></code></pre>
-            </section>
-          </main>
-        
-          <script src="scripts/main.js"></script>
+            </button>
+        </p>
+        <section class="subscription-details js-subscription-details is-invisible">
+            <p>Once you've subscribed your user, you'd send their subscription to your
+                server to store in a database so that when you want to send a message
+                you can lookup the subscription and send a message to it.</p>
+            <p>To simplify things for this code lab copy the following details
+                into the <a href="https://web-push-codelab.glitch.me//">Push Companion
+                    Site</a> and it'll send a push message for you, using the application
+                server keys on the site - so make sure they match.</p>
+            <pre><code class="js-subscription-json"></code></pre>
+        </section>
+    </main>
+
+    <script src="scripts/main.js"></script>
     </main>
     <!-- Essential javascripts for application to work-->
     <script src="js/jquery-3.3.1.min.js"></script>
