--- a/signup.html
+++ b/signup.html
@@ -16,6 +16,9 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>navigator.serviceWorker.register("service-worker.js")</script>
+    <link rel="manifest" href="manifest.json" />
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -41,8 +44,8 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Phone</label>
-                    <input class="form-control login_form" maxlength="10" id="signup_phone" type="text" placeholder="Phone"
-                        autofocus oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+                    <input class="form-control login_form" maxlength="10" id="signup_phone" type="text"
+                        placeholder="Phone" autofocus oninput="this.value=this.value.replace(/[^0-9]/g,'');">
                 </div>
                 <div class="form-group">
                     <label class="control-label">Email</label>
@@ -54,7 +57,8 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Confirm Password</label>
-                    <input class="form-control login_form" id="signup_c_password" type="password" placeholder="Confirm Password">
+                    <input class="form-control login_form" id="signup_c_password" type="password"
+                        placeholder="Confirm Password">
                 </div>
                 <div class="form-group btn-container">
                     <button type="button" onclick="handleUserLogin()" class="btn btn-primary btn-block"><i
@@ -94,7 +98,7 @@
             let email = document.getElementById('signup_email').value
             let password = document.getElementById('signup_password').value
             let c_password = document.getElementById('signup_c_password').value
-            let referred_by =  new URL(location.href).searchParams.get("a");
+            let referred_by = new URL(location.href).searchParams.get("a");
             if (phone?.length < 10) {
                 endLoader()
                 $.notify({
