--- a/signup.html
+++ b/signup.html
@@ -16,8 +16,8 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>navigator.serviceWorker.register("service-worker.js")</script>
-    <link rel="manifest" href="manifest.json" />
+    <!-- <script>navigator.serviceWorker.register("service-worker.js")</script> -->
+    <!-- <link rel="manifest" href="manifest.json" /> -->
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
 </head>
 
